--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.21.8",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/preset-env": "^7.21.5",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.5",
@@ -57,9 +58,9 @@
     "@types/node": "^20.5.9",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
-    "axios": "^1.5.0",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
+    "axios": "^1.5.0",
     "babel-loader": "^9.1.2",
     "chromatic": "^6.24.1",
     "css-loader": "^6.7.3",
