--- a/backend/business-service/src/main/resources/application.yml
+++ b/backend/business-service/src/main/resources/application.yml
@@ -5,20 +5,9 @@ spring:
   application:
     name: BUSINESS-SERVICE
   datasource:
-    url: jdbc:mysql://3.22.208.121:30001/pocket_pay
+    url: jdbc:mysql://localhost:3306/pocket_pay
     username: root
-    password: Bootcamp@117!
-  flyway:
-    baselineOnMigrate: true
-    locations: classpath:db/migration
-    validate-on-migrate: false
-    encoding: UTF-8
-    out-of-order: true
-    url: jdbc:mysql://3.22.208.121:30001/pocket_pay
-    user: root
-    password: Bootcamp@117!
-
-
+    password: Test@1234
 eureka:
   client:
     register-with-eureka: true
