--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -28,10 +28,11 @@ jobs:
             uses: actions/checkout@v3
             with:
               fetch-depth: 0
-          - name: Set up JDK 17
-            uses: actions/setup-java@v1
+          - name: Setup Java
+            uses: actions/setup-java@v3
             with:
-              java-version: 17
+                distribution: "corretto"
+                java-version: "17"
           - name: Cache Maven packages
             uses: actions/cache@v1
             with:
