--- a/backend/api-gateway/Dockerfile
+++ b/backend/api-gateway/Dockerfile
@@ -1,5 +1,12 @@
-FROM openjdk:17-alpine
-WORKDIR /api-gateway
-COPY target/*.jar /api-gateway/app.jar
+FROM maven:3.8.3-openjdk-17 AS MAVEN_JAR
+WORKDIR /code
+COPY . .
+RUN mvn clean package -DskipTests
+ 
+
+
+FROM openjdk:17-jdk-alpine
+WORKDIR /opt
+COPY --from=MAVEN_JAR /code/target/*.jar /opt/web.jar
 EXPOSE 9191
-ENTRYPOINT ["java", "-jar", "/api-gateway/app.jar"]
+ENTRYPOINT ["java","-jar","/opt/web.jar"]
