--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -44,4 +44,4 @@ jobs:
           - name: Build Docker Image
             run:  docker build . --tag ghcr.io/${{secrets.GHCR_USERNAME}}/bootcamp117-backend:${{github.run_number}}
           - name:  Push Docker Image to GHCR
-            run: docker push ghcr.io/${{secrets.GHCR_USERNAME}}/bootcamp117-backend:${{github.run_number}} 
+            run: docker push ghcr.io/${{secrets.GHCR_USERNAME}}/bootcamp117-backend-${{matrix.services}}:${{github.run_number}} 
