--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -42,6 +42,6 @@ jobs:
           - name: Login to GitHub Container Registry
             run: docker login --username ${{secrets.GHCR_USERNAME}} --password ${{secrets.GHCR_PAT}} ghcr.io 
           - name: Build Docker Image
-            run:  docker build . --tag ghcr.io/${{secrets.GHCR_USERNAME}}/bootcamp117-backend-${{matrix.services}}:${{github.run_number}}
+            run:  docker build . --tag ghcr.io/${{secrets.GHCR_USERNAME}}/bootcamp117-backend-${{matrix.services}}:v${{github.run_number}}
           - name:  Push Docker Image to GHCR
-            run: docker push ghcr.io/${{secrets.GHCR_USERNAME}}/bootcamp117-backend-${{matrix.services}}:${{github.run_number}} 
+            run: docker push ghcr.io/${{secrets.GHCR_USERNAME}}/bootcamp117-backend-${{matrix.services}}:v${{github.run_number}} 
