--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -41,6 +41,6 @@ jobs:
       - name: Login to GitHub Container Registry
         run: docker login --username ${{secrets.GHCR_USERNAME}} --password ${{secrets.GHCR_PAT}} ghcr.io 
       - name: Build Docker Image
-        run:  docker build . --tag ghcr.io/${{secrets.GHCR_USERNAME}}/bootcamp117-frontend:${{github.run_number}}
+        run:  docker build . --tag ghcr.io/${{secrets.GHCR_USERNAME}}/bootcamp117-frontend:v${{github.run_number}}
       - name:  Push Docker Image to GHCR
-        run: docker push ghcr.io/${{secrets.GHCR_USERNAME}}/bootcamp117-frontend:${{github.run_number}}
+        run: docker push ghcr.io/${{secrets.GHCR_USERNAME}}/bootcamp117-frontend:v${{github.run_number}}
