--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -1,5 +1,5 @@
 name: BOOTCAMP117- Frontend deployment 
-run-name: Frontend Deployment Update triggered by ${{ github.actor }}.
+run-name: Frontend Deployment update triggered by ${{ github.actor }}.
 on:
   push:
     branches:
